--- a/cs/FaceSentimentAnalyzer/FaceSentimentAnalyzer.csproj
+++ b/cs/FaceSentimentAnalyzer/FaceSentimentAnalyzer.csproj
@@ -27,7 +27,7 @@
     <DefineConstants>DEBUG;TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\FaceSentimentAnalyzer.XML</DocumentationFile>
+    <DocumentationFile>..\..\common\FaceSentimentAnalyzer.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -37,7 +37,7 @@
     <DefineConstants>TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\FaceSentimentAnalyzer.XML</DocumentationFile>
+    <DocumentationFile>..\..\common\FaceSentimentAnalyzer.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <PlatformTarget>x86</PlatformTarget>
@@ -49,7 +49,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <ErrorReport>prompt</ErrorReport>
-    <DocumentationFile>bin\FaceSentimentAnalyzer.XML</DocumentationFile>
+    <DocumentationFile>..\..\common\FaceSentimentAnalyzer.XML</DocumentationFile>
     <GenerateLibraryLayout>false</GenerateLibraryLayout>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
@@ -62,7 +62,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <ErrorReport>prompt</ErrorReport>
-    <DocumentationFile>bin\FaceSentimentAnalyzer.XML</DocumentationFile>
+    <DocumentationFile>..\..\common\FaceSentimentAnalyzer.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|ARM'">
     <PlatformTarget>ARM</PlatformTarget>
@@ -74,7 +74,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <ErrorReport>prompt</ErrorReport>
-    <DocumentationFile>bin\FaceSentimentAnalyzer.XML</DocumentationFile>
+    <DocumentationFile>..\..\common\FaceSentimentAnalyzer.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|ARM'">
     <PlatformTarget>ARM</PlatformTarget>
@@ -86,7 +86,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <ErrorReport>prompt</ErrorReport>
-    <DocumentationFile>bin\FaceSentimentAnalyzer.XML</DocumentationFile>
+    <DocumentationFile>..\..\common\FaceSentimentAnalyzer.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <PlatformTarget>x64</PlatformTarget>
@@ -99,7 +99,7 @@
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <ErrorReport>prompt</ErrorReport>
     <ProduceReferenceWinmd>false</ProduceReferenceWinmd>
-    <DocumentationFile>bin\FaceSentimentAnalyzer.XML</DocumentationFile>
+    <DocumentationFile>..\..\common\FaceSentimentAnalyzer.XML</DocumentationFile>
     <GenerateLibraryLayout>false</GenerateLibraryLayout>
     <LangVersion>default</LangVersion>
   </PropertyGroup>
@@ -113,7 +113,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <ErrorReport>prompt</ErrorReport>
-    <DocumentationFile>bin\FaceSentimentAnalyzer.XML</DocumentationFile>
+    <DocumentationFile>..\..\common\FaceSentimentAnalyzer.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
