--- a/cs/FaceSentimentAnalysisTestApp/FaceSentimentAnalysisTestApp_cpp.csproj
+++ b/cs/FaceSentimentAnalysisTestApp/FaceSentimentAnalysisTestApp_cpp.csproj
@@ -144,6 +144,9 @@
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.3</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls">
+      <Version>5.1.0</Version>
+    </PackageReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
