--- a/samples/SentimentAnalyzerCustomSkill/cpp/DXCore_WinRTComponent/DXCore_WinRTComponent.vcxproj.filters
+++ b/samples/SentimentAnalyzerCustomSkill/cpp/DXCore_WinRTComponent/DXCore_WinRTComponent.vcxproj.filters
@@ -12,20 +12,20 @@
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="$(GeneratedFilesDir)module.g.cpp" />
-    <ClCompile Include="LearningModelDeviceHelper.cpp" />
+    <ClCompile Include="DXCoreHelper.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
-    <ClInclude Include="LearningModelDeviceHelper.h" />
+    <ClInclude Include="DXCoreHelper.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="DXCoreHelper.def" />
+    <None Include="DXCore_WinRTComponent.def" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="readme.txt" />
   </ItemGroup>
   <ItemGroup>
-    <Midl Include="DXCoreHelper.idl" />
+    <Midl Include="DxcoreHelper.idl" />
   </ItemGroup>
 </Project>
