--- a/samples/SentimentAnalyzerCustomSkill/cs/FaceSentimentAnalysisTestApp/FaceSentimentAnalysisTestApp_cpp.csproj
+++ b/samples/SentimentAnalyzerCustomSkill/cs/FaceSentimentAnalysisTestApp/FaceSentimentAnalysisTestApp_cpp.csproj
@@ -138,8 +138,8 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Contoso.FaceSentimentAnalyzer_CPP">
-      <Version>0.0.0.4</Version>
+    <PackageReference Include="Microsoft.AI.Skills.SkillInterfacePreview">
+      <Version>0.5.2.12</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.3</Version>
@@ -147,6 +147,12 @@
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls">
       <Version>5.1.0</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\cpp\FaceSentimentAnalyzer\Contoso.FaceSentimentAnalyzer.vcxproj">
+      <Project>{e0320926-075f-46fc-9cc0-865b635bb1a1}</Project>
+      <Name>Contoso.FaceSentimentAnalyzer</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
